--- a/sky-register/src/main/resources/application.yml
+++ b/sky-register/src/main/resources/application.yml
@@ -8,7 +8,7 @@ db:
   user: ${MYSQL-USER:root}
   password: ${MYSQL-PWD:123456}
   url:
-    0: jdbc:mysql://${MYSQL-HOST:pigx-mysql}:${MYSQL-PORT:3306}/${MYSQL-DB:pigx_config}?characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=false&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=GMT%2B8&nullCatalogMeansCurrent=true&allowPublicKeyRetrieval=true
+    0: jdbc:mysql://${MYSQL-HOST:sky-mysql}:${MYSQL-PORT:3306}/${MYSQL-DB:pigx_config}?characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=false&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=GMT%2B8&nullCatalogMeansCurrent=true&allowPublicKeyRetrieval=true
 
 nacos:
   core:
